# nautobot-plugin-ip-services

./: README.md  pyproject.toml
nautobot-plugin-ip-services/: __init__.py  models.py  template_content.py  urls.py  views.py
nautobot-plugin-ip-services/templates/nautobot_plugin_ip_services/: ipaddress_services.html
nautobot-plugin-ip-services/tests/: test_models.py  test_nautobot_plugin_ip_services.py  test_views.py
nautobot_plugin_ip_services/: __init__.py  models.py  navigation.py  template_content.py  urls.py  views.py
nautobot_plugin_ip_services/templates/nautobot_plugin_ip_services/: ipaddress_services.html
nautobot_plugin_ip_services/tests/: test_models.py  test_nautobot_plugin_ip_services.py  test_views.py
