[tool.poetry]
name = "nautobot_plugin_ip_services"
version = "0.1.0"
description = "View/Manage Services from IPAM"
authors = ["Matt Mullen <mullenmd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
