[tool.poetry]
name = "nautobot-plugin-ip-services"
version = "1.0.4"
description = "View/Manage Services from IPAM"
authors = ["Matt Mullen <mullenmd@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/mamullen13316/nautobot-plugin-ip-services"
repository = "https://github.com/mamullen13316/nautobot-plugin-ip-services"
include = [
    "LICENSE",
]
packages = [
    { include = "nautobot_plugin_ip_services" }
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
